# actix_actorless_chatapp

./: Cargo.toml  README.md
src/: client.rs  handler.rs  main.rs
