[package]
name = "actix_actorless_chatapp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "websocket-server"
path = "src/main.rs"

[[bin]]
name = "websocket-client"
path = "src/client.rs"

[dependencies]
actix-files = "0.6"
actix-web = "4.9"
actix-ws = "0.3"
awc = "3.2"
env_logger = "0.11"
log = "0.4"
futures-util = { version = "0.3", features = ["sink"] }
time = "0.3"
rand = "0.9.0-alpha.2"
tokio = { version = "1.24.2", features = ["sync", "io-util", "rt", "time", "macros"] }
tokio-stream = "0.1.1"